--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=9092
 spring.datasource.url = jdbc:mysql://localhost:3306/testingManageBack?serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.username = coundoul95
+spring.datasource.password = passer1234
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+allowed.origin=http://localhost:4200
